[project]
name = "servicenow_code_reviewer_agent"
version = "0.1.0"
description = "An AI-powered agent for reviewing ServiceNow scripts and configurations."
authors = [
    { name = "Ravi Teja Chava", email = "chavaraviteja@outlook.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",       # or langchain, if you're using LLM integrations
    "requests",
    "rich",         # optional, for CLI output
    "pydantic",     # for data models
    "a2a-sdk",
    "google-adk"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "mypy"
]

[tool.setuptools]
packages = ["servicenow_code_reviewer_agent"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.flake8]
max-line-length = 88
exclude = ["__pycache__", ".git", ".venv"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
